# deskly-crm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  agent_vision.py  agent_workflow.py  alembic.ini  check_ui_bugs.py  create_client_workflow.json  create_test_user.py  debug_workflow.json  docker-compose.yml  pyproject.toml  requirements.txt  show_modal_workflow.json  workflow.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_indexes.py  0003_add_order_search_indexes.py  0004_add_users.py  0005_add_activity_log.py  0006_add_reminders.py  0007_add_tenant_id.py  0008_add_tenant_unique_constraints.py  0009_add_tenants.py  0010_add_invites.py  (+3 more)
app/: __init__.py  activity.py  app_factory.py  auth.py  db.py  main.py  models.py  schemas.py  security.py  validators.py
go-backend/: go.mod  go.sum  main.go
tests/: conftest.py  test_activity_log.py  test_api_v1.py  test_auth_api_users.py  test_auth_roles.py  test_auth_ui_flow.py  test_client_validation.py  test_decimal_handling.py  test_delete_flow.py  test_export_filters.py  test_extras.py  test_health.py  test_import_csv.py  test_invites.py  test_metrics.py  test_orders_filters.py  test_orders_summary.py  test_overpay.py  test_reminders.py  test_smoke.py  test_ui_flows.py
(+113 files in other folders)
