[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskly-crm"
version = "0.3.2"
description = "DesklyCRM — lightweight client, orders & payments tracker for freelancers and small businesses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RezPoint" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "templates/*.html",
  "templates/**/*.html",
  "templates/*.jinja",
  "templates/**/*.jinja",
  "templates/*.j2",
  "templates/**/*.j2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
